--- a/pt-web/src/styles/_globals.scss
+++ b/pt-web/src/styles/_globals.scss
@@ -3,8 +3,6 @@
 
 :root {
   --container-max: 1530px;
-  --gutter: 24px;
-  --gutter-sm: 16px;
 }
 
 * {
@@ -66,18 +64,6 @@ canvas {
   display: block;
   max-width: 100%;
   height: auto;
-}
-
-.container {
-  inline-size: min(var(--container-max), 100%);
-  margin-inline: auto;
-  padding-inline: var(--gutter);
-}
-
-@media (width <= 1024px) {
-  .container {
-    padding-inline: var(--gutter-sm);
-  }
 }
 
 .section + .section {
